--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_URI ='mongodb://localhost/nest'
 JWT_SECRET ='secretKey'
 JWT_LIFE_SPAN ='5h'
 CORS_ORIGIN = http://localhost:3000
+
+yX9AYUQuaEjMCqfz
